--- a/views/job-role-list.njk
+++ b/views/job-role-list.njk
@@ -146,13 +146,13 @@
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                             </svg>
-                            Clear Filters
+                            {{ t('jobRoles.clearFilters') }}
                         </a>
                         <button type="submit" class="btn btn-primary btn-sm gap-2">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                             </svg>
-                            Apply Filters
+                            {{ t('jobRoles.applyFilters') }}
                         </button>
                     </div>
                 </form>
