--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -11,7 +11,9 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link
-    rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> <!-- Base CSS -->
+    rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> <!-- Fonts -->
+    <link rel="stylesheet" href="/css/fonts.css">
+    <!-- Base CSS -->
     <link
     rel="stylesheet" href="/css/style.css">
     <!-- Page-specific CSS -->
